<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/about_us_linerlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:visibility="gone"
    android:background="#DEDEDE" >
  <LinearLayout 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:gravity="center"
     android:paddingLeft="30dp" >
 <ImageView
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:layout_gravity="center"
    android:src="@drawable/china_rewards_logo" /> 
    <TextView 
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:textColor="#818181"
     android:text="@string/company_website"/>
</LinearLayout>   
    <TextView
        android:id="@+id/about_us_content_main"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:text="@string/about_us_content_main"
        android:lineSpacingExtra="5dp"
        android:textSize="16sp" /> 
          <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:paddingTop="15dp"
        android:text="@string/imvip_introduce"
        android:lineSpacingExtra="5dp"
        android:textSize="16sp" /> 
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="#ff6000"
            android:text="@string/current_softversion"/>
        
</LinearLayout>