<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" 
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    style="@style/main_page_color">
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textColor="@color/business_message_error_page_title_txtColor"
            android:text="@string/nearbyPromoteErrorMsg"/>
        <EditText 
            android:id="@+id/errorRemarkTxt"
            android:layout_width="fill_parent"
            android:layout_height="240dp"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:hint="@string/error_remark_msg"
            android:gravity="top"
            android:maxLength="500"
            android:textColorHint="@color/business_message_error_page_content_txtColorHint"
            android:background="@drawable/global_textview_bg"
            android:padding="5dp"/>

        <EditText
            android:id="@+id/errorEmailTxt"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:hint="@string/error_email_msg"
            android:maxLength="50"
            android:textColorHint="@color/business_message_error_page_email_txtColorHint"
            android:inputType="textEmailAddress" >
        </EditText>
        <Button 
            android:id="@+id/errorSubmitBtn"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:textSize="18dp"
            android:background="@drawable/global_btn_bg"
            android:text="@string/error_submit_msg"/>
</LinearLayout> 