<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/footer_bg"
    android:id="@+id/footerView"
>
                <TextView
                    android:id="@+id/searchTxt"
                    android:text="@string/search" 
                    android:drawableTop="@drawable/search_icon"
                    android:background="@drawable/footer_bg_selector"
                    style="@style/footer_button_text"/>
            <ImageView android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/seperate"/>
            
                <TextView
                    android:id="@+id/walletTxt"
                    android:text="@string/mywallet"
                    android:drawableTop="@drawable/wallet_icon"
                    android:background="@drawable/footer_bg_selector"
                    style="@style/footer_button_text" />
            <ImageView android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:src="@drawable/seperate"/>

                <TextView
                    android:id="@+id/moreTxt"
                    android:text="@string/more" 
                    android:drawableTop="@drawable/more_icon"
                    android:background="@drawable/footer_bg_selector"
                    style="@style/footer_button_text"/>

</LinearLayout>
